# opencode-go-usage

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  _base.py  opencode_go_usage.py  pyproject.toml  scraper_cp.py  scraper_go.py  test_opencode_go_usage.py  test_quotactl.py  watchdog.py
examples/: read-usage.py  switch-provider-watchdog.py
