[project]
name = "opencode-go-usage"
version = "1.0.0"
description = "Fetch OpenCode Go usage limits as JSON — no browser, just your session cookie"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "brfid" }]
keywords = ["opencode", "opencode-go", "usage", "cli", "rate-limit", "session-cookie", "coding-agent"]
dependencies = []

[project.scripts]
opencode-go-usage = "opencode_go_usage:main"

[project.urls]
Homepage = "https://github.com/brfid/opencode-go-usage"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["opencode_go_usage.py"]

[tool.hatch.build.targets.wheel.sources]
"opencode_go_usage.py" = "opencode_go_usage.py"
