[project]
name = "quotactl"
version = "1.1.0"
description = "Quota-aware LLM provider switch advisor — check rate limits across providers and get a simple instruction: stay or switch"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "brfid" }]
keywords = ["llm", "quota", "rate-limit", "provider", "switch", "opencode", "clinepass", "watchdog", "cli"]
dependencies = []

[project.scripts]
quotactl-go = "scraper_go:main"
quotactl-cp = "scraper_cp:main"
quotactl = "watchdog:main"

[project.urls]
Homepage = "https://github.com/brfid/quotactl"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper_go.py", "scraper_cp.py", "watchdog.py", "_base.py"]

[tool.pytest.ini_options]
testpaths = ["test_quotactl.py"]
